--- a/examples/index.html
+++ b/examples/index.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width,initial-scale=1.0">
+  <meta content="width=device-width,initial-scale=1.0,maximum-scale=1.0,user-scalable=no"  name="viewport" />
   <title>ivue</title>
 </head>
 <body style="margin: 0;padding: 0;">
